--- a/publish.htm
+++ b/publish.htm
@@ -1,6 +1,18 @@
-﻿<HTML>
+﻿
+<HTML>
   <HEAD>
-    <TITLE>Text Encrypter</TITLE>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131384567-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-131384567-1');
+    </script>
+	
+    <TITLE>Text Encrypter مشفّر النصوص</TITLE>
+	<A HREF="https://www.linkedin.com/in/a-kanaan/">Contact Us</A>
     <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8" />
     <STYLE TYPE="text/css">
 <!--
@@ -154,7 +166,7 @@ If these components are already installed, you can <SPAN CLASS="JustThisApp"><A 
 <TR><TD>
 <!-- Begin Footer -->
 <TABLE WIDTH="100%" CELLPADDING="0" CELLSPACING="0" BORDER="0" BGCOLOR="#ffffff"><TR><TD HEIGHT="5"><SPACER TYPE="block" HEIGHT="5" /></TD></TR><TR><TD CLASS="FooterText" ALIGN="center">
-<A HREF="https://www.a-kanaan.com">Text Encrypter Customer Support</A>
+<A HREF="https://www.linkedin.com/in/a-kanaan/">Text Encrypter Customer Support</A>
 &nbsp;&nbsp;&nbsp;::&nbsp;&nbsp;&nbsp;
 <A HREF="https://go.microsoft.com/fwlink/?LinkId=154571">ClickOnce and .NET Framework Resources</A>
 </TD></TR><TR><TD HEIGHT="5"><SPACER TYPE="block" HEIGHT="5" /></TD></TR><TR><TD HEIGHT="1" bgcolor="#cecece"><SPACER TYPE="block" HEIGHT="1" /></TD></TR></TABLE>
