--- a/publish.htm
+++ b/publish.htm
@@ -137,13 +137,7 @@ function CompareVersions(v1, v2)
 <TR><TD ALIGN="LEFT"><TABLE CELLPADDING="2" CELLSPACING="0" BORDER="0" WIDTH="540"><TR><TD WIDTH="496">
 
 <!-- Begin AppInfo -->
-<TABLE><TR><TD COLSPAN="3">&nbsp;</TD></TR><TR><TD><B>Name:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>Text Encrypter</TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR><TR><TD><B>Version:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>1.0.0.5</TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR><TR><TD><B>Publisher:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>Text Encrypter</TD></TR><tr><td colspan="3">&nbsp;</td></tr>
-</TR><TR><TD><B>Description:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>هل تبحث عن تطبيق سهلة لتشفير وضغط النصوص. يتيح لك برنامجي إمكانية نسخ ولصق المحتوى الذي ترغب بتشفيره ليخزن النص مشفرا وأضغر حجما من الأصلي! ويمكنك أيضا حماية الملف المشفر بكلمة مرور لإستخدامها عند فك التشفير أعددت هذا التطبيق مع خوارزميته بشكل كامل دون الإعتماد على أي مكاتب لطرف آخر! ملاحظة: حتى لو حاولت فتح الملف بالمفكرة أو أي برنامج آخر فلن يظهر لك غير الطلاسم!<br> <br> التطبيق له واجهة واحدة رئيسية تتيح لك:<br>  1. تشفير الملفات النصية<br>  2. تخزين الملف المشفر كملف نصي<br>  3. تخزين الملف الأصلي أيضا داخل محرر نصوص التطبيق<br>  4. حماية ملفك المشفر بكلمة مرور عند فك التشفير<br>  5. واجهة البرنامج مدعومة باللغتين العربية والإنجليزية<br> <br> يمكنك تحميل النسخة التجريبية.<br><br>لتفعيل البرنامج: أرسل لي بريدك الإلكتروني مع الشيفرة التي يظهرها البرنامج في قائمة "مساعدة" -> "حالة البرنامج" -> Activate
-
-<br>
-Text Encrypter encrypts and ciphers any text. It is a very friendly interface application.  <br>You simply need to copy and paste the text that you want, then encrypt it.  Do not forget to further secure your encryption with a password.  <br><br>  features:<br>    1. Encrypt and Decrypt any size text.<br>    2. Save the encryption to a new file<br>    3. Save the original text as well<br>    4. Compress the original size of the text<br>    5. Secure your encryption further with a password-decryption protection<br>    6. User-friendly interface. no commands are required  <br>  the application was developed in 2006<br>  <br>  To activate your copy of the application: <br> 1. You can Pay What You Want<br> 2. send me the email through which you made the paymet<br> 3. "Code" the application generates. You can find it in "Help" -> "App Status" -> Activate <br>
-Thank you :)</TD></TR><TR>
-</TABLE>
+<TABLE><TR><TD COLSPAN="3">&nbsp;</TD></TR><TR><TD><B>Name:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>Text Encrypter</TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR><TR><TD><B>Version:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>1.0.0.5</TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR><TR><TD><B>Publisher:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>Text Encrypter</TD></TR><tr><td colspan="3">&nbsp;</td></tr></TABLE>
 <!-- End AppInfo -->
 
 
@@ -152,7 +146,15 @@ Thank you :)</TD></TR><TR>
 <LI>Microsoft .NET Framework 4.8 (x86 and x64)</LI>
 </UL></TD></TR><TR><TD COLSPAN="2">
 If these components are already installed, you can <SPAN CLASS="JustThisApp"><A HREF="TextEncrypter.application">launch</A></SPAN> the application now. Otherwise, click the button below to install the prerequisites and run the application.
-</TD></TR><TR><TD COLSPAN="2">&nbsp;</TD></TR></TABLE>
+</TD></TR><TR><TD COLSPAN="2">&nbsp;</TD></TR>
+
+</TR><TR><TD><B>Description:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>هل تبحث عن تطبيق سهلة لتشفير وضغط النصوص. يتيح لك برنامجي إمكانية نسخ ولصق المحتوى الذي ترغب بتشفيره ليخزن النص مشفرا وأضغر حجما من الأصلي! ويمكنك أيضا حماية الملف المشفر بكلمة مرور لإستخدامها عند فك التشفير أعددت هذا التطبيق مع خوارزميته بشكل كامل دون الإعتماد على أي مكاتب لطرف آخر! ملاحظة: حتى لو حاولت فتح الملف بالمفكرة أو أي برنامج آخر فلن يظهر لك غير الطلاسم!<br> <br> التطبيق له واجهة واحدة رئيسية تتيح لك:<br>  1. تشفير الملفات النصية<br>  2. تخزين الملف المشفر كملف نصي<br>  3. تخزين الملف الأصلي أيضا داخل محرر نصوص التطبيق<br>  4. حماية ملفك المشفر بكلمة مرور عند فك التشفير<br>  5. واجهة البرنامج مدعومة باللغتين العربية والإنجليزية<br> <br> يمكنك تحميل النسخة التجريبية.<br><br>لتفعيل البرنامج: أرسل لي بريدك الإلكتروني مع الشيفرة التي يظهرها البرنامج في قائمة "مساعدة" -> "حالة البرنامج" -> Activate
+
+<br>
+Text Encrypter encrypts and ciphers any text. It is a very friendly interface application.  <br>You simply need to copy and paste the text that you want, then encrypt it.  Do not forget to further secure your encryption with a password.  <br><br>  features:<br>    1. Encrypt and Decrypt any size text.<br>    2. Save the encryption to a new file<br>    3. Save the original text as well<br>    4. Compress the original size of the text<br>    5. Secure your encryption further with a password-decryption protection<br>    6. User-friendly interface. no commands are required  <br>  the application was developed in 2006<br>  <br>  To activate your copy of the application: <br> 1. You can Pay What You Want<br> 2. send me the email through which you made the paymet<br> 3. "Code" the application generates. You can find it in "Help" -> "App Status" -> Activate <br>
+Thank you :)</TD></TR><TR>
+</TABLE>
+</TABLE>
 <!-- End Prerequisites -->
 
 
